--- a/index.html
+++ b/index.html
@@ -12,44 +12,43 @@
 <body>
     <div class="page">
         <section class="container">
-            <>
-                <nav class="navbar">
-                    <div navbar_content>
-                        <img src="" alt="">
-                        <ul>
-                            <li><a href="#">Exclusivos</a></li>
-                            <li><a href="#">Nuevos</a></li>
-                            <li><a href="#">Gift cards</a></li>
-                            <li><a href="#"></a>Find a store</li>
-                        </ul>
-                    </div>
-                </nav>
-
-                <section class="main-content">
-                    <p>Diseña tu</p>
-                    <h1>Súper Héroe!</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus eligendi modi hic nihil
-                        consequatur aspernatur iste dolor! Ut, maxime? Excepturi, earum! Quo praesentium magni quos vero
-                        ipsam dicta repellendus.</p>
-                </section>
-
-                <section class="side-content">
-                    <p>Superman</p>
+            <nav class="navbar">
+                <div navbar_content>
                     <img src="" alt="">
-                    <div></div>
-                </section>
+                    <ul>
+                        <li><a href="#">Exclusivos</a></li>
+                        <li><a href="#">Nuevos</a></li>
+                        <li><a href="#">Gift cards</a></li>
+                        <li><a href="#">Find a store</a></li>
+                    </ul>
+                </div>
+            </nav>
 
-                <section>
-                    <div><img src="" alt=""></div>
-                </section>
+            <section class="main-content">
+                <p>Diseña tu</p>
+                <h1>Súper Héroe!</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus eligendi modi hic nihil
+                    consequatur aspernatur iste dolor! Ut, maxime? Excepturi, earum! Quo praesentium magni quos vero
+                    ipsam dicta repellendus.</p>
+            </section>
 
-                <section>
-                    <div><img src="" alt=""></div>
-                </section>
+            <section class="side-content">
+                <p>Superman</p>
+                <img src="" alt="">
+                <div></div>
+            </section>
 
-                <section>
-                    <div><img src="" alt=""></div>
-                </section>
+            <section>
+                <div><img src="" alt=""></div>
+            </section>
+
+            <section>
+                <div><img src="" alt=""></div>
+            </section>
+
+            <section>
+                <div><img src="" alt=""></div>
+            </section>
         </section>
 
         <section class="loader">
