--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <div class="page">
         <section class="container">
             <nav class="navbar">
-                <div navbar_content>
-                    <img src="" alt="">
+                <div class="navbar__content">
+                    <img src="./assets/img/logo.png" alt="logo">
                     <ul>
-                        <li><a href="#">Exclusivos</a></li>
-                        <li><a href="#">Nuevos</a></li>
-                        <li><a href="#">Gift cards</a></li>
-                        <li><a href="#">Find a store</a></li>
+                        <li><a href="#">EXCLUSIVOS</a></li>
+                        <li><a href="#">NUEVOS</a></li>
+                        <li><a href="#">GIFT CARDS</a></li>
+                        <li><a href="#">FIND A STORE</a></li>
                     </ul>
                 </div>
             </nav>
@@ -33,8 +33,8 @@
             </section>
 
             <section class="side-content">
-                <p>Superman</p>
-                <img src="" alt="">
+                <p>Iron man</p>
+                <!-- <img src="./assets/img/avengers.png" alt=""> -->
                 <div></div>
             </section>
 
