feat: Contenido lateral

--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             </section>
 
             <section class="side-content">
-                <p>Iron man</p>
-                <!-- <img src="./assets/img/avengers.png" alt=""> -->
+                <p>LOKI</p>
                 <div></div>
+                <img src="./assets/img/avengers.png" alt="">
+
             </section>
 
             <section>
