--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </nav>
 
             <section class="main-content">
-                <p>Diseña tu</p>
+                <p>Elige a tu</p>
                 <h1>Súper Héroe!</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim possimus eligendi modi hic nihil
                     consequatur aspernatur iste dolor! Ut, maxime? Excepturi, earum! Quo praesentium magni quos vero
@@ -39,26 +39,19 @@
 
             </section>
 
-            <section>
-                <div><img src="" alt=""></div>
+            <section class="footer">
+                <div><img src="./assets/img/Black-Widow.png" alt="Black-Widow"></div>
+                <div><img src="./assets/img/thor.png" alt="thor"></div>
+                <div><img src="./assets/img/vision.png" alt="vision"></div>
             </section>
 
-            <section>
-                <div><img src="" alt=""></div>
+            <section class="loader">
+                <div></div>
+                <div></div>
+                <div></div>
             </section>
 
-            <section>
-                <div><img src="" alt=""></div>
-            </section>
-        </section>
-
-        <section class="loader">
-            <div></div>
-            <div></div>
-            <div></div>
-        </section>
-
-        <section></section>
+            <section></section>
     </div>
 </body>
 
