feat: Cómo acceder al DOM con JavaScript

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
             </section>
 
             <section class="footer">
-                <div><img src="./assets/img/Black-Widow.png" alt="Black-Widow"></div>
+                <div id="button1"><img src="./assets/img/ironman.png" alt="ironman"></div>
                 <div><img src="./assets/img/thor.png" alt="thor"></div>
-                <div><img src="./assets/img/vision.png" alt="vision"></div>
+                <div><img src="./assets/img/pantera.png" alt="pantera"></div>
             </section>
 
             <section class="loader">
@@ -51,8 +51,13 @@
                 <div></div>
             </section>
 
-            <section></section>
+            <section class="modal hidden"></section>
     </div>
 </body>
+
+<script>
+    const modal = document.querySelector('#modal')
+    const button1 = document.querySelector('#button1')
+</script>
 
 </html>
