--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="navbar__content">
                     <img src="./assets/img/logo.png" alt="logo">
                     <ul>
-                        <li><a href="#">EXCLUSIVOS</a></li>
-                        <li><a href="#">NUEVOS</a></li>
+                        <li><a href="#">EXCLUSIVE</a></li>
+                        <li><a href="#">NEW</a></li>
                         <li><a href="#">GIFT CARDS</a></li>
                         <li><a href="#">FIND A STORE</a></li>
                     </ul>
@@ -54,6 +54,23 @@
             <section class="modal hidden">
                 <div class="modal__content">
                     <img class="modal__content--close" src="https://img.icons8.com/windows/50/000000/macos-close.png" />
+                    <div class="modal__content--slider">
+                        <input type="radio" name="slider-1" id="radio-1" checked>
+                        <input type="radio" name="slider-1" id="radio-2">
+                        <input type="radio" name="slider-1" id="radio-3">
+
+                        <div class="cards">
+                            <label class="card" for="radio-1" id="card-1">
+                                <!-- <img src="./assets/img/ironman1.png" alt="ironman1"> -->
+                            </label>
+                            <label class="card" for="radio-2" id="card-2">
+                                <!-- <img src="./assets/img/ironman2.png" alt="ironman2"> -->
+                            </label>
+                            <label class="card" for="radio-3" id="card-3">
+                                <!-- <img src="./assets/img/ironman3.png" alt="ironman3"> -->
+                            </label>
+                        </div>
+                    </div>
                 </div>
             </section>
     </div>
