feat: Ajuste del slider

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <div class="navbar__content">
                     <img src="./assets/img/logo.png" alt="logo">
                     <ul>
-                        <li><a href="#">EXCLUSIVE</a></li>
-                        <li><a href="#">NEW</a></li>
+                        <li><a href="#">EXCLUSIVO</a></li>
+                        <li><a href="#">NUEVO</a></li>
                         <li><a href="#">GIFT CARDS</a></li>
                         <li><a href="#">FIND A STORE</a></li>
                     </ul>
@@ -41,7 +41,7 @@
 
             <section class="footer">
                 <div id="button1"><img src="./assets/img/ironman.png" alt="ironman"></div>
-                <div id="button2"><img src="./assets/img/thor.png" alt="thor"></div>
+                <div id="button2"><img src="./assets/img/vision.png" alt="vision"></div>
                 <div id="button3"><img src="./assets/img/pantera.png" alt="pantera"></div>
             </section>
 
@@ -61,16 +61,17 @@
 
                         <div class="cards">
                             <label class="card" for="radio-1" id="card-1">
-                                <!-- <img src="./assets/img/ironman1.png" alt="ironman1"> -->
+                                <img src="./assets/img/ironman1.png" alt="ironman1">
                             </label>
                             <label class="card" for="radio-2" id="card-2">
-                                <!-- <img src="./assets/img/ironman2.png" alt="ironman2"> -->
+                                <img src="./assets/img/ironman2.png" alt="ironman2">
                             </label>
                             <label class="card" for="radio-3" id="card-3">
-                                <!-- <img src="./assets/img/ironman3.png" alt="ironman3"> -->
+                                <img src="./assets/img/ironman3.png" alt="ironman3">
                             </label>
                         </div>
                     </div>
+                    <button class="button-content">COMPRAR</button>
                 </div>
             </section>
     </div>
