--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                         <li><a href="#">GIFT CARDS</a></li>
                         <li><a href="#">FIND A STORE</a></li>
                     </ul>
+                    <a class="menu_image" href="assets/html/menu-mobile.html">
+                    </a>
                 </div>
             </nav>
 
