--- a/assets/html/menu-mobile.html
+++ b/assets/html/menu-mobile.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/assets/css/menu_mobile.css">
+    <link rel="stylesheet" href="/assets/css/media_queries.css">
     <title>Ménu mobile</title>
   </head>
 
